Java 21, gradle 8.5 og chainguard image.